--- a/trunk/Imobiliaria/src/Visao/CadastroPessoal.form
+++ b/trunk/Imobiliaria/src/Visao/CadastroPessoal.form
@@ -234,10 +234,18 @@
                           </Layout>
                           <SubComponents>
                             <Component class="javax.swing.JTextField" name="jtfNome">
+                              <Events>
+                                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfNomeKeyTyped"/>
+                              </Events>
                             </Component>
                             <Component class="javax.swing.JTextField" name="jtfRG">
                             </Component>
                             <Component class="javax.swing.JTextField" name="jtfCPF_CNPJ">
+                            </Component>
+                            <Component class="javax.swing.JFormattedTextField" name="jftfNome">
+                              <Properties>
+                                <Property name="text" type="java.lang.String" value="jFormattedTextField1"/>
+                              </Properties>
                             </Component>
                           </SubComponents>
                         </Container>
