--- a/Imobiliaria/src/Visao/VendaImovelN.form
+++ b/Imobiliaria/src/Visao/VendaImovelN.form
@@ -123,6 +123,9 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbNumeroItemStateChanged"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jlDescricaoRua">
               <Properties>
@@ -216,6 +219,9 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbNomeItemStateChanged"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jlDescricaoCPF">
               <Properties>
